<resources>
    <string name="app_name">MyFragmentMADE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">This activity Profile</string>
    <string name="this_category">This fragment Category</string>
    <string name="category_lifestyle">Fragment Category Lifestyle</string>
    <string name="category_name">Fragment Category Name</string>
    <string name="category_description">Fragment Category Description</string>
    <string name="to_profile">Profile Activity</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="hello_home_fragment">Hello this Home Fragment</string>
    <string name="to_category">Fragment Category</string>
    <string name="question_coach">Siapa pelatih tersukses Juventus?</string>
    <string name="marcello_lippi">Marcello Lippi</string>
    <string name="antoino_conte">Antoino Conte</string>
    <string name="max_allegri">Max Allegri</string>
    <string name="sarri">Sarri</string>
    <string name="choose">Choose</string>
    <string name="close">Close</string>
</resources>
